--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,22 @@
 </head>
 
 <body>
- 
+  <div class="login">
+	<h1>Predict Salary Analysis</h1>
+
+     <!-- Main Input For Receiving Query to our ML -->
+    <form action="{{ url_for('predict')}}"method="post">
+    	<input type="text" name="latitude" placeholder="latitude" required="required" />
+        <input type="text" name="longitude" placeholder="longitude" required="required" />
+
+        <button type="submit" class="btn btn-primary btn-block btn-large">Predict</button>
+    </form>
+
+   <br>
+   <br>
+   {{ prediction_text }}
+
+  </div>
 
 
 </body>
